CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(XMDelayExec)

SET(CMAKE_BUILD_TYPE "Release")

INCLUDE_DIRECTORIES(include ${XMList_PATH}/include)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O3 -Wall")

AUX_SOURCE_DIRECTORY(${XMList_PATH}/src SRC_LIST1)
AUX_SOURCE_DIRECTORY(src SRC_LIST)

ADD_LIBRARY(${CMAKE_PROJECT_NAME} SHARED ${SRC_LIST} ${SRC_LIST1})

target_link_libraries(XMDelayExec pthread)