CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(XMParamReader)

SET(CMAKE_BUILD_TYPE "Release")

INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${XMFilePath}/include)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wall")

AUX_SOURCE_DIRECTORY(src SRC_LIST)
AUX_SOURCE_DIRECTORY(${XMFilePath}/src SRC_LIST1)

ADD_LIBRARY(XMParamReader ${SRC_LIST} ${SRC_LIST1})