CMAKE_MINIMUM_REQUIRED(VERRSION 3.10)
PROJECT(XMString)

SET(CMAKE_BUILD_TYPE "Release")

INCLUDE_DIRECTORIES(include ${XMBase64Path}/include)

SET(CMAKE_C_FLAGS "${CMAKE_C_fLAGS} -O3 -Wall")

AUX_SOURCE_DIRECTORY(src SRC_LIST)
AUX_SOURCE_DIRECTORY(${XMBase64Path}/src SRC_LIST1)

ADD_LIBRARY(XMString SHARED ${SRC_LIST} ${SRC_LIST1})